fix fav-heart on mobile

--- a/src/pages/Items/ItemCard/ItemCard.css
+++ b/src/pages/Items/ItemCard/ItemCard.css
@@ -82,8 +82,8 @@
   font-family: "Font Awesome 5 Free"; 
   font-weight: 600;
   font-size: 75px;
-  color: rgba(254, 200, 200, .15); 
-  clip-path: inset(0 0 22px 0);
+  color: rgba(254, 200, 200, .25); 
+  clip-path: inset(0 0 26px 0);
   z-index: -1;
 }
 
@@ -111,7 +111,7 @@
   font-weight: 600;
   font-size: 75px;
   color: rgba(100, 100, 100, .33);
-  clip-path: inset(0 0 22px 0); 
+  clip-path: inset(0 0 26px 0); 
   z-index: -1;
 }
 
@@ -142,5 +142,8 @@
   }
   .itemcard__logoover {
     padding-top: 50%;
+  }
+  .itemcard__metaFavorite::before {
+  color: rgba(254, 200, 200, .05); 
   }
 }
